--- a/day9_rotating nav/style.css
+++ b/day9_rotating nav/style.css
@@ -19,6 +19,51 @@ body {
   min-height: 100vh;
   padding: 50px;
 }
+
+/* 서치바 */
+
+.search {
+  position: relative;
+  float: right;
+  height: 50px;
+  margin-right: 20px;
+}
+
+.search .input {
+  background-color: #fafafa;
+  border: 0;
+  font-size: 15px;
+  padding: 15px;
+  height: 50px;
+  width: 50px;
+  transition: width 0.3s ease;
+}
+
+.btn {
+  background-color: #fafafa;
+  border: 0;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: transform 0.3s ease;
+}
+
+.btn:focus,
+.input:focus {
+  outline: none;
+}
+
+.search.active .input {
+  width: 200px;
+}
+
+.search.active .btn {
+  transform: translate(198px);
+}
+
 .container.show-nav {
   transform: rotate(-30deg);
 }
